pr comment - updated with string.join